--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,6 +19,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
+      - run: echo "argentina.floranativabb.com.ar" > ./dist/CNAME
       - run: cp ./dist/index.html ./dist/404.html
       - run: ls -la ./dist
       - uses: peaceiris/actions-gh-pages@v4
