--- a/src/config/projects.yaml
+++ b/src/config/projects.yaml
@@ -5,7 +5,9 @@
 # To add a new project:
 # 1. Add it under the appropriate province in 'provincial' or under 'national'
 # 2. Include at least the 'name' field
-# 3. Add any social media links (instagram, facebook, x, web, contacto, etc.)
+# 3. Optionally add 'category' field (divulgacion-general, educativos-institucionales, restauracion-conservacion)
+#    If not specified, defaults to 'divulgacion-general'
+# 4. Add any social media links (instagram, facebook, x, web, contacto, etc.)
 # 
 # To add a new social network:
 # 1. Simply add a new field to any project (e.g., youtube: "...")
@@ -17,16 +19,20 @@
 provincial:
   "Buenos Aires":
     - name: "Nativas bonaerenses"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativas.bonaerenses"
       contacto: "nativasbonaerensess@gmail.com"
     
     - name: "Flora del Sistema de Tandilia"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/flora.tandilia"
     
     - name: "Flora de Punta Alta"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/flora.de.punta.alta"
     
     - name: "Flora Nativa Bahía Blanca"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/floranativabb"
       facebook: "www.facebook.com/floranativabb"
       web: "https://floranativabb.com.ar"
@@ -34,77 +40,96 @@ provincial:
 
   "Catamarca":
     - name: "Flora Catamarqueña"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/floracatamarquena"
     
     - name: "Nativas de las Sierras (Catamarca y Córdoba)"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/flora.serrana"
 
   "Chubut":
     - name: "Nativas de Chubut"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativas.chubut"
 
   "Córdoba":
     - name: "Nativas de Córdoba"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativascordoba"
     
     - name: "Nativas de las Sierras (Catamarca y Córdoba)"
+      category: "divulgacion-general"    
       instagram: "www.instagram.com/flora.serrana"
 
   "Corrientes":
     - name: "Nativas de Corrientes"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativasdecorrientes_arg"
 
   "Mendoza":
     - name: "Flora Mendocina"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/flora.mendocina"
       facebook: "www.facebook.com/flora.mendocina"
     
     - name: "Nativas Mendocinas"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/floranativamendocina"
 
   "Misiones":
     - name: "Flora Misionera"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/floramisionera"
 
   "Río Negro":
     - name: "Flora Nativa de Río Negro"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/flora.nativa.rn"
 
   "Salta":
     - name: "Nativas de Salta"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativasdesalta"
     
     - name: "Nativas salteñas"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/saltanativas"
 
   "San Luis":
     - name: "Nativas de San Luis"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativasdesanluis"
 
   "Santiago del Estero":
     - name: "Nativas de Santiago del Estero"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativas_santiagodelestero"
 
   "Tierra del Fuego":
     - name: "Flora de Tierra del Fuego"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/flora.de.tierradelfuego"
       facebook: "www.facebook.com/floratdf"
 
   "Tucumán":
     - name: "Nativas tucumanas"
+      category: "divulgacion-general"
       instagram: "www.instagram.com/nativastucumanas"
     
     - name: "Fundación Forestar"
+      category: "restauracion-conservacion"
       instagram: "www.instagram.com/fundacionforestar"
 
 # National-level projects (Argentina-wide)
 national:
   - name: "Helechos y Licófitas de Argentina"
+    category: "divulgacion-general"
     instagram: "www.instagram.com/helechosylicofitasdeargentina"
     x: "https://x.com/helechylicofarg"
     contacto: "helechosylicofitasdeargentina@gmail.com"
   
   - name: "Sociedad Argentina de Botánica"
+    category: "divulgacion-general"
     instagram: "www.instagram.com/socargbot"
     x: "https://x.com/sabotanica"
     facebook: "www.facebook.com/sabotanica"
